# maifds

./: .env.production  .gitignore  DEPLOYMENT.md  QUICKSTART.md  README.md  SERVER_SETUP_GUIDE.md  SETUP.md  TEST_ENDPOINTS.md  app.py  demo_centralized_audit_service.py  demo_privacy_framework.py  deploy.sh  deployment_config.sh  maifds.service  nginx_maifds.conf  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.ps1  setup.sh  update_paths.py  update_paths_all.py
API_DOCS/: API_DOCS.md  README.md  README_API_DOCS.md
API_DOCS/tests_kit/: audit_services.md  blacklist_watchlist_service.md  call_triggered_defense_test.md  click_tx_link_correlation.md  customer_reputation_system.md  orchestrator.md  phishing_ad_referral_channel_detector.md  privacy.md  (+2 more)
HUAWEI/: .gitignore  README_MINDSPORE.md  SERVICES_OVERVIEW.md  config.json  mindspore_detector.py  requirements.txt  requirements_mindspore.txt  setup_mindspore.sh
customer-reputation-system/: README.md  requirements.txt  test_correlation.py  test_mule_detection.py
customer_reputation_system/: README.md  WORKING_DEMO.py  demo_agent_risk_system.py  main.py  requirements.txt  test_agent_profiling.py  test_correlation.py  test_integration.py  test_mule_detection.py
maifds_services/: .gitignore  README.md  SERVICES_OVERVIEW.md  push_to_github.sh  requirements.txt
mel_dev/: Cyrill.txt  README.md  requirements.txt
ui/: .env.production  404.html  README.md  about.html  contact.html  error.html  faq.html  features.html  index.html  openapi.json  package-lock.json  package.json  requirements.txt  tailwind.config.js  vite.config.ts
(+293 files in other folders)
