[project]
name = "maifds"
version = "0.1.0"
description = "AI powered cyber protection for Ghana's MoMo ecosystem"
readme = "README.md"
requires-python = ">=3.9,<3.12"
# Note: This is a monorepo - dependencies are managed via requirements.txt
# This file is mainly for metadata and optional dependency groups
# Dependencies are intentionally empty - use requirements.txt instead
dependencies = []
    "mindspore>=2.4.1",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pyarrow>=10.0.0",
    "scikit-learn>=1.3.0",
    "pydantic>=2.5.0",
    "python-dateutil>=2.8.0",
    "transformers>=4.30.0",
    "jieba>=0.42.1",
    "spacy>=3.5.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "Flask>=2.3.0",
    "Flask-CORS>=4.0.0",
    "redis>=5.0.0",
    "bitarray>=2.8.0",
    "python-whois>=0.8.0",
    "whois>=0.9.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.65.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.optional-dependencies]
gpu = ["mindspore-gpu>=2.2.14"]
production = ["gunicorn>=21.2.0"]
sms-twilio = ["twilio>=8.5.0"]
sms-africastalking = ["africastalking>=1.2.7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# This is a monorepo with independent modules, not a single installable package
# Modules are run directly, not installed as a package
[tool.hatch.build.targets.wheel]
packages = []

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

